[3.4.8] 多语言支持%转义，多语言兼容重复语言地区漏翻